version/0.20/_sources/api/solver/_autosummary/settings/species_3.rst.txt
:orphan:

.. _species_3:

species
=======

.. autoclass:: ansys.fluent.core.solver.settings_241.species_3.species
    :show-inheritance:

.. rubric:: Attributes

==============================================   ==================================================================================================

Attribute                                                                                                                                   Summary

==============================================   ==================================================================================================
:ref:`volumetric_species <volumetric_species>`                                                                          'volumetric_species' child.

:ref:`last_species <last_species>`                   The last species should be the most abundant one, no transport equation will be solved for it.

==============================================   ==================================================================================================

.. rubric:: Included in:

====================================   ===================================

Parent                                                             Summary

====================================   ===================================
:ref:`mixture_child <mixture_child>`       'child_object_type' of mixture.

====================================   ===================================

