version/0.25/_sources/api/solver/_autosummary/settings/species_3.rst.txt
:orphan:

.. _species_3:

species
=======

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.species_3.species
    :show-inheritance:

.. rubric:: Attributes

==============================================   ==================================================================================================

Attribute                                                                                                                                   Summary

==============================================   ==================================================================================================
:ref:`volumetric_species <volumetric_species>`                                                                          'volumetric_species' child.

:ref:`volumetric <volumetric>`                                                                                           Select volumetric species.

:ref:`site <site>`                                                                                                             Select site species.

:ref:`solid <solid_1>`                                                                                                        Select solid species.

:ref:`last_species <last_species>`                   The last species should be the most abundant one, no transport equation will be solved for it.

:ref:`material <material_2>`                                                                                              Species material objects.

==============================================   ==================================================================================================

.. rubric:: Included in:

====================================   ===================================

Parent                                                             Summary

====================================   ===================================
:ref:`mixture_child <mixture_child>`       'child_object_type' of mixture.

====================================   ===================================

